# Simple-Web-Scrapper

./: CMakeLists.txt  README.md
src/: main.cpp  scraper.cpp  scraper.h
